# smolvlm-ios-prep

./: .gitignore  README.md  pyproject.toml
configs/: smolvlm-256m-instruct-fp32.json  smolvlm-256m-instruct.json
docs/: ios-integration.md
smolvlm_ios_prep/: __init__.py  cli.py  config.py  contract.py  download.py  fixture.py  manifest.py  package.py  validate.py
templates/ios/: SmolVLMArtifactManifest.swift
tests/: test_package_validate.py
